Fixed the alignment of the button by using margin-block-start

--- a/scss/_section-newsletter.scss
+++ b/scss/_section-newsletter.scss
@@ -34,11 +34,19 @@ input::-webkit-input-placeholder {
 .submit_button {
   background-color: #434CCC;
   color: #FFFFFF;
+  font-size: 16px;
   padding-block-start: calc((48px - 16px) / 2);
   padding-block-end: calc((48px - 16px) / 2);
   padding-inline-start: 45px;
   padding-inline-end: 45px;
   border: none;
+  max-height: 48px;
+  max-width: 100%;
+}
+
+.submit_button:hover {
+  background-color: #1e27a7;
+  box-shadow: 1px 1px 3px #000000;
 }
 
 .submit_button,
@@ -86,6 +94,15 @@ input::-webkit-input-placeholder {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: calc(346px + 54px + 170px);
+    width: calc(346px + 54px + 170px);
+  }
+
+  .email_input {
+    margin-block-end: 0;
+    width: 346px;
+  }
+
+  .submit_button {
+    margin-block-start: 30px;
   }
 }
